Remove scrollbar and add spacing

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,3 +4,12 @@ body {
     background-attachment: fixed !important;
     background-size: cover !important;
 }
+
+html {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
